--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -11,10 +11,8 @@
     <h1>My Favorite City</h1>
     <p>My Favorite City is Stone Town, Zanzibar in Tanzania. It's where Swahili soul meets spice scented air.
         It's the tourist heartbeat of the East African coast's, it's centuries old blend of Arab, Persian, Indian, and
-        African
-        influences meets.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Zanzibar_StoneTown.png/330px-Zanzibar_StoneTown.png"
-        alt="Stone Town, Zanzibar">
+        African influences meets.</p>
+    <img src="images/Zanzibar_StoneTown.png" alt="Stone Town, Zanzibar">
 </body>
 
 </html>
