--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Ibeziem Wisdom | WDD 130</title>
 </head>
 
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own
-        personal details.</p>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Ibeziem Wisdom | Welcome to WDD 130</h1>
+        <img src="images/Profile1.jpg" alt="Hey! My name is Ibeziem Wisdom" width="200">
+        <p>
+            Hi, my name is Wisdom Ikechi. I’m from Abuja, Nigeria. My hobbies include robotics, exploring hidden
+            documentaries, and playing tennis. I’m currently studying Software Engineering through
+            BYU Pathway, and I’m especially excited to dive deeper into web development and design.
+            I look forward to building my own website soon and continuing to explore the
+            world of code with curiosity and passion for innovation.
+        </p>
+    </main>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <footer>
+        <p>©2025 ✨ Ibeziem Wisdom ✨ Abuja, Nigeria.</p>
+    </footer>
 </body>
 
 </html>
