Made some adjustment

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </nav>
     </header>
     <main>
-        <h1>Ibeziem Wisdom | Welcome to WDD 130</h1>
-        <img src="images/Profile1.jpg" alt="Hey! My name is Ibeziem Wisdom" width="200">
+        <h1> WDD 130 | Ibeziem Wisdom</h1>
+        <img src="images/profile1.jpg" alt="Hey! My name is Ibeziem Wisdom" width="200">
         <p>
             Hi, my name is Wisdom Ikechi. I’m from Abuja, Nigeria. My hobbies include robotics, exploring hidden
             documentaries, and playing tennis. I’m currently studying Software Engineering through
