--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <h1> WDD 130 | Ibeziem Wisdom </h1>
+        <h1> wdd130 | Ibeziem Wisdom </h1>
         <img src="images/profile1.jpg" alt="Hey! My name is Ibeziem Wisdom" width="200">
         <p>
             Hi, my name is Wisdom Ikechi. I’m from Abuja, Nigeria. My hobbies include robotics, exploring hidden
