--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wdd130 | Ibeziem Wisdom</title>
+    <meta name="description"
+        content="I'm Wisdom Ikechi taking wdd130 Web fundamental course and these is my personal page">
+    <meta name="author" content="Ibeziem Wisdom">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>WDD 130 | Ibeziem Wisdom</title>
 </head>
 
 <body>
@@ -15,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <h1> wdd130 | Ibeziem Wisdom </h1>
+        <h1> WDD 130 | Ibeziem Wisdom </h1>
         <img src="images/profile1.jpg" alt="Hey! My name is Ibeziem Wisdom" width="200">
         <p>
             Hi, my name is Wisdom Ikechi. I’m from Abuja, Nigeria. My hobbies include robotics, exploring hidden
@@ -25,6 +29,18 @@
             world of code with curiosity and passion for innovation.
         </p>
     </main>
+
+    <aside>
+        <h2> Abuja, Nigeria </h2>
+        <img src="images/Abuja-Landscape.webp" alt="Abuja-Landscape">
+        <p>
+            Abuja is Nigeria's administrative and political capital.
+            As the seat of the Federal Government of Nigeria, it hosts key national institutions, landmarks, and
+            buildings spread
+            across its over 50 districts. It replaced Lagos (the most populous city in Nigeria) as the capital on 12
+            December 1991.
+        </p>
+    </aside>
 
     <footer>
         <p>©2025 ✨ Ibeziem Wisdom ✨ Abuja, Nigeria.</p>
